--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+
+  <!-- HEADER -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark opacity-75">
       <div class="container">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,78 +46,109 @@
       </div>
     </nav>
   </header>
+  <!-- END OF HEADER -->
 
+  <!-- MAIN -->
   <main>
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <div class="img-1 d-block w-100"></div>
-          <div class="main-content container">
-            <div class="row">
-              <div class="col">
-                <div class="title">
-                  <h2>Frontend Developer</h2>
-                  <h1>Hanizar Florian Sukma</h1>
-                </div>
-                <div class="content">
-                  <p>Hay! My name is Hanizar, a junior UI Designer and Frontend Developer. Now i'm studying in the 1st semester of Informatics and Computer Engineering Education, Sebelas Maret University.</p>
-                </div>
-                <div class="more">
-                  <a href="#">MORE ABOUT ME</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="img-2 d-block w-100"></div>
-          <div class="main-content container">
-            <div class="row">
-              <div class="col">
-                <div class="title">
-                  <h2>Frontend Developer</h2>
-                  <h1>Hanizar Florian Sukma</h1>
-                </div>
-                <div class="content">
-                  <p>Hay! My name is Hanizar, a junior UI Designer and Frontend Developer. Now i'm studying in the 1st semester of Informatics and Computer Engineering Education, Sebelas Maret University.</p>
-                </div>
-                <div class="more">
-                  <a href="#">MORE ABOUT ME</a>
+          <div class="img-1 d-block"></div>
+          <div class="main-content animated fadeInUp" style="animation-delay: 2">
+            <div class="container">
+              <div class="row">
+                <div class="col">
+                  <div class="title">
+                    <h2>Frontend Developer</h2>
+                    <h1>Hanizar Florian Sukma</h1>
+                  </div>
+                  <div class="content">
+                    <p>Hay! My name is Hanizar, a junior UI Designer and Frontend Developer.<br>
+                      Now i'm studying in the 1st semester of Informatics and Computer Engineering Education,<br>
+                      Sebelas Maret University.</p>
+                  </div>
+                  <div class="more">
+                    <a href="#">MORE ABOUT ME</a>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
         <div class="carousel-item">
-          <div class="img-3 d-block w-100"></div>
-          <div class="main-content container">
-            <div class="row">
-              <div class="col">
-                <div class="title">
-                  <h2>Frontend Developer</h2>
-                  <h1>Hanizar Florian Sukma</h1>
+          <div class="img-2 d-block"></div>
+          <div class="main-content animated fadeInUp" style="animation-delay: 2">
+            <div class="container">
+              <div class="row">
+                <div class="col">
+                  <div class="title">
+                    <h2>Frontend Develr</h2>
+                    <h1>Hanizar Florian Sukma</h1>
+                  </div>
+                  <div class="content">
+                    <p>Hay! My name is Hanizar, a junior UI Designer and Frontend Developer.<br>
+                      Now i'm studying in the 1st semester of Informatics and Computer Engineering Education,<br>
+                      Sebelas Maret University.</p>
+                  </div>
+                  <div class="more">
+                    <a href="#">MORE ABOUT ME</a>
+                  </div>
                 </div>
-                <div class="content">
-                  <p>Hay! My name is Hanizar, a junior UI Designer and Frontend Developer. Now i'm studying in the 1st semester of Informatics and Computer Engineering Education, Sebelas Maret University.</p>
-                </div>
-                <div class="more">
-                  <a href="#">MORE ABOUT ME</a>
+              </div>
+            </div>
+          </div>  
+        </div>
+        <div class="carousel-item">
+          <div class="img-3 d-block"></div>
+          <div class="main-content animated fadeInUp" style="animation-delay: 2">
+            <div class="container">
+              <div class="row">
+                <div class="col">
+                  <div class="title">
+                    <h2>Froeloper</h2>
+                    <h1 class="main-content animated fadeInUp">Hanizar FSukma</h1>
+                  </div>
+                  <div class="content">
+                    <p>Hay! My name is Hanizar, a junior UI Designer and Frontend Developer.<br>
+                      Now i'm studying in the 1st semester of Informatics and Computer Engineering Education,<br>
+                      Sebelas Maret University.</p>
+                  </div>
+                  <div class="more">
+                    <a href="#">MORE ABOUT ME</a>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-        <i class="fa fa-arrow-left" aria-hidden="true"></i>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-        <i class="fa fa-arrow-right" aria-hidden="true"></i>
-        <span class="visually-hidden">Next</span>
-      </button>
+      <div class="controller">
+        <div class="mobile">
+          <div class="container">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+              <i class="fa fa-arrow-left" aria-hidden="true"></i>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+              <i class="fa fa-arrow-right" aria-hidden="true"></i>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <div class="desktop d-flex flex-column">
+          <button class="carousel-control-prev mb-5" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+            <i class="fa fa-arrow-up" aria-hidden="true"></i>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next mt-5" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+            <i class="fa fa-arrow-down" aria-hidden="true"></i>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
     </div>
   </main>
+  <!-- END OF MAIN -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
